Horizontal scroll fix

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     justify-content: center;
     align-self: start;
     width: auto;
+    min-width: 300px;
     padding: 1rem;
     font-family: 'Open Sans', sans-serif;
 }
